components/31-molecules/modal/_modal.scss
.modal {
  display: flex;
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  box-shadow: $box-shadow-primary color('dark-gray', -4, true);
  visibility: hidden;
  z-index: 997;
  overflow-y: auto;

  // states
  &.visible {
    visibility: visible;

    @include tablet {
      .modal-overlay {
        display: block;
      }
    }
  }

  // children
  &-inner {
    display: flex;
    position: absolute;
    top: 0;
    left: 0;
    flex-direction: column;
    width: 100%;
    min-height: 100%;
    background-color: color('white');
    z-index: 999;

    @include tablet {
      right: 0;
      width: 80vw;
      max-width: $bp-max-content * .8;
      height: auto;
      min-height: 0;
      margin: 10vh auto $gutter-width
    }
  }

  // modifiers
  &--fixed-height {
    > .modal-inner {
      height: 100%;

      @include tablet {
        height: auto;
        min-height: 0;
        max-height: 80vh;
      }

      > .modal-content {
        overflow-y: auto;
      }
    }
  }

  ///
  /// Header
  ///
  &-header {
    display: block;
    flex-shrink: 0;
    text-align: right;
  }

  &-header &-close {
    min-height: 0;
    padding: 0 .4rem;
    border: 0;
    background: transparent;
    color: color('dark-gray');
    font-size: .8rem;
    font-weight: 400;
    cursor: pointer;

    &::before {
      order: 0;
      margin: 0 .5rem 0 0;
      font-size: 1.4rem;
    }

    &:hover,
    &:focus {
      @include theme('background-color', 'color-primary--lighten-4', 'modal-close-hover-bg-color');
    }
  }

  &-close {
    cursor: pointer;
  }

  ///
  /// Content
  ///
  &-content {
    padding: 0 1rem .8rem;

    @include tablet {
      padding: 0 $gutter-width .8rem;
    }
  }

  ///
  /// Actions
  ///
  &-actions {
    @include theme('border-color', 'color-primary--lighten-4', 'checkbox-with-filter-action-border-bottom');

    display: flex;
    flex-shrink: 0;
    align-items: center;
    width: 100%;
    padding: .8rem 1rem;
    border-top: 2px solid;
    background-color: color('white');

    @include tablet {
      position: relative;
    }
  }

  ///
  /// Overlay
  ///
  &-overlay {
    display: none;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    opacity: .7;
    z-index: 998;

    &,
    &:hover,
    &:focus {
      @include theme('background-color', 'color-primary--darken-3', 'checkbox-with-filter-overlay-background-color');
    }
  }
}

